# lantern-npyro

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/lantern_npyro/: __init__.py  data.py  model.py
tests/: conftest.py  test_data.py  test_model.py
