[project]
name = "lantern-npyro"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "carrascomj", email = "carrascomurielj@gmail.com" }
]
dependencies = [
    "numpyro[cpu]>=0.15.3",
    "matplotlib>=3.9.2",
    "pyqt5>=5.15.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lantern_npyro"]
